<resources>
    <string name="app_name">FireShare</string>

    <string name="google_app_id">60511707309</string>

    <!-- Strings related to login -->
    <string name="prompt_email">Email</string>
    <string name="prompt_name">Name</string>
    <string name="prompt_password">Password</string>
    <string name="prompt_password2">Retype password</string>
    <string name="error_wrong_credentials">Wrong email or password. Please try again.</string>
    <string name="error_incorrect_password">This password is incorrect</string>
    <string name="error_field_required">Field cannot be empty.</string>

    <string name="error_image_problem">There was a problem getting the image. Please try again</string>
    <string name="error_no_user">There was a problem getting this user\'s info. Please try again</string>

    <string name="error_posting">There was a problem posting your text. Please try again.</string>

    <string name="success_delete">Successfully deleted!</string>
    <string name="error_delete">There was a problem deleting. Please try again.</string>

    <string name="warning_dialog_title">Denounce</string>
    <string name="warning_dialog_text_report">Are you sure you want to denounce: %1$s for posting \'%2$s\'</string>
    <string name="warning_dialog_text_delete">Are you sure you want to delete this?</string>

    <string name="error_dialog_title">Ooops</string>
    <string name="error_dialog_text">You have to write something before posting</string>

    <string name="button_register">Sign in</string>
    <string name="button_update">Update</string>
    <string name="button_cancel">Cancel</string>
    <string name="button_login">Login</string>

    <string name="loading_text">LOADING</string>

    <string name="user_total_posts">%s posts</string>
    <string name="write_post_hint">Write your phrase here&#8230;</string>
    <string name="write_comment_hint">Write your comment here&#8230;</string>

    <plurals name="weeks">
        <item quantity="one">%d week</item>
        <item quantity="other">%d weeks</item>
    </plurals>

    <plurals name="days">
        <item quantity="one">%d day ago</item>
        <item quantity="other">%d days ago</item>
    </plurals>

    <plurals name="hours">
        <item quantity="one">%d hour ago</item>
        <item quantity="other">%d hs ago</item>
    </plurals>

    <plurals name="minutes">
        <item quantity="one">%d min ago</item>
        <item quantity="other">%d mins ago</item>
    </plurals>

    <string name="date_now">Just now</string>

    <string name="new_version_title">New Version</string>
    <string name="new_version_message">A new version of this app is available</string>

    <string name="remaining_characters">%d characters</string>

    <string name="comment_like_success">You like this comment</string>
    <string name="comment_dislike_success">You don’t like this comment</string>
    <string name="comment_report_success">Report made!</string>

    <string name="post_like_success">You like this post</string>
    <string name="post_dislike_success">You don’t like this post</string>
    <string name="post_report_success">Report made!</string>

    <string name="error_like">Hubo un error al realizar el like</string>
    <string name="error_dislike">Hubo un error al realizar el dislike</string>
    <string name="error_report">Hubo un error al reportar esto</string>

    <string name="terms_and_conditions"><![CDATA[http://fireshareterms.anabtatec-mobile.com]]></string>
</resources>
